--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(BOOST_ROOT "${CMAKE_BINARY_DIR}/Boost-prefix/src/Boost")
 
 
 target_include_directories(main PRIVATE ${BOOST_ROOT})
-target_link_directories(main PRIVATE ${BOOST_ROOT}/lib)
+target_link_directories(main PRIVATE ${BOOST_ROOT}/stage/lib)
 
 target_link_libraries(main PRIVATE boost_system boost_filesystem boost_thread  boost_atomic boost_coroutine boost_context)
 target_link_libraries(main PRIVATE pthread crypto ssl)
